// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/qr-code/demo/base.tsx correctly 1`] = `
<div
  class="ant-qrcode"
  style="width:128px;height:128px"
>
  <canvas
    height="128"
    style="height:128px;width:128px"
    width="128"
  />
</div>
`;

exports[`renders ./components/qr-code/demo/download.tsx correctly 1`] = `
<div
  id="myqrcode"
>
  <div
    class="ant-qrcode"
    style="width:128px;height:128px"
  >
    <canvas
      height="128"
      style="height:128px;width:128px"
      width="128"
    />
  </div>
  <button
    class="ant-btn ant-btn-default"
    style="margin-block-start:16px"
    type="button"
  >
    <span>
      下载二维码
    </span>
  </button>
</div>
`;

exports[`renders ./components/qr-code/demo/errorlevel.tsx correctly 1`] = `
Array [
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="L"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        L
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="M"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        M
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="Q"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Q
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="H"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        H
      </span>
    </label>
  </div>,
  <div
    class="ant-qrcode"
    style="margin-top:16px;width:128px;height:128px"
  >
    <canvas
      height="128"
      style="height:128px;width:128px"
      width="128"
    />
  </div>,
]
`;

exports[`renders ./components/qr-code/demo/logo.tsx correctly 1`] = `
<div
  class="ant-qrcode"
  style="width:128px;height:128px"
>
  <canvas
    height="128"
    style="height:128px;width:128px"
    width="128"
  />
  <img
    src="https://gw.alipayobjects.com/zos/antfincdn/%24C9tmj978R/Carousel.svg"
    style="display:none"
  />
</div>
`;
